--- a/Esc/Assembly-CSharp.csproj
+++ b/Esc/Assembly-CSharp.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Assets\GoogleVR\Scripts\Utilities\GvrVRHelpers.cs" />
     <Compile Include="Assets\GoogleVR\Scripts\Video\GvrVideoPlayerTexture.cs" />
     <Compile Include="Assets\Level_01\Scripts\DoorScript.cs" />
+    <Compile Include="Assets\Level_01\Scripts\kepad_Screen.cs" />
     <Compile Include="Assets\Level_01\Scripts\Keypad_Button_Press.cs" />
     <Compile Include="Assets\Level_01\Scripts\Keypad_System.cs" />
     <None Include="Assets\GoogleVR\Shaders\GvrUIOverlayFont.shader" />
